log
Sun, May 15, 2022 11:32:30 AM: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|5
total_score: 0/70
6d7ff23
Sun, May 15, 2022 11:34:32 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
c1ea7b7
Sun, May 15, 2022 11:40:07 AM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
db349d0
Sun, May 15, 2022 11:42:03 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
52e52fe
Sun, May 15, 2022 11:42:31 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3fe925b
Sun, May 15, 2022 11:50:31 AM: 
 sudoku.c | 24 +++++++++++++++---------
 1 file changed, 15 insertions(+), 9 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:75:27: error: passing argument 2 of 'buscarCasillaVacia' makes pointer from integer without a cast [-Werror=int-conversion]
     buscarCasillaVacia(n, indiceI, indiceJ);
                           ^~~~~~~
sudoku.c:52:6: note: expected 'int *' but argument is of type 'int'
 bool buscarCasillaVacia(Node* n, int* indiceI, int* indiceJ)
      ^~~~~~~~~~~~~~~~~~
sudoku.c:75:36: error: passing argument 3 of 'buscarCasillaVacia' makes pointer from integer without a cast [-Werror=int-conversion]
     buscarCasillaVacia(n, indiceI, indiceJ);
                                    ^~~~~~~
sudoku.c:52:6: note: expected 'int *' but argument is of type 'int'
 bool buscarCasillaVacia(Node* n, int* indiceI, int* indiceJ)
      ^~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
332d5b4
Sun, May 15, 2022 11:51:11 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
d73e5cf
Sun, May 15, 2022 11:52:18 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3f8701b
Sun, May 15, 2022 12:35:40 PM: 
 sudoku.c | 53 +++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 51 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9a8b69b
Sun, May 15, 2022 12:41:07 PM: 
 sudoku.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
ae6a435
Sun, May 15, 2022 12:43:58 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
6bd7bf1
Sun, May 15, 2022 12:44:40 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
edaff02
Sun, May 15, 2022 12:59:31 PM: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
91334de
Sun, May 15, 2022  1:03:01 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:159:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
       if (is_valid(nuevoNodo) == 1);
       ^~
sudoku.c:160:7: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
       {
       ^
cc1.exe: all warnings being treated as errors
Compilation failed
67b0aa5
